--- a/app1/index.html
+++ b/app1/index.html
@@ -7,6 +7,10 @@
    
   <link rel="manifest" href="./pwa/manifest.webmanifest">
   <script src="./pwa/setup.js"></script>
+  <link rel="apple-touch-icon" href="https://img.icons8.com/ultraviolet/48/000000/plus.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png"> 
   
   <script src="//viewzavr.com/apps/viewzavr-system-a/lib/viewlang/code/depends/jquery-2.1.4.js"></script>
 
@@ -14,7 +18,6 @@
   <script src="//viewzavr.com/apps/viewzavr-system-a/lib/viewlang/code//depends/qmlweb/src/process.js"></script>
   <script src="//viewzavr.com/apps/viewzavr-system-a/lib/viewlang/code//depends/qmlweb/src/import.js"></script>
   <script src="//viewzavr.com/apps/viewzavr-system-a/lib/viewlang/code//depends/qmlweb/src/qtcore.js"></script>
-
   <script src="//viewzavr.com/apps/viewzavr-system-a/lib/viewlang/code//base.js"></script>
 <head>
 </head>
